--- a/style.css
+++ b/style.css
@@ -88,13 +88,13 @@ body{
 
     .container{
         margin-left: 5px;
-        width: 385px;
-        height: 700px;
+        width: 335px;
+        height: 600px;
         margin-top: 20px;
     }
 
     .question{
-        width: 340px;
+        width: 292px;
         margin-left: 20px;
     }
 
@@ -105,12 +105,12 @@ body{
     .options-container{
         display: flex;
         flex-wrap: wrap;
-        margin-left: 19px;
+        margin-left: 26px;
     }
 
     .option-box{
-        width: 40%;
-        height: 100px;
+        width: 38%;
+        height: 88px;
         margin: 10px;
         font-size: 25px;
         border: 1px solid black;
@@ -118,14 +118,16 @@ body{
 
     .start-container{
         width: 40%;
-        font-size: xx-large;
-        height: 55px;
-        margin-left: 110px;
+        font-size: x-large;
+        height: 40px;
+        margin-left: 100px;
+        margin-top: 18px;
+        text-align: center;
     }
 
     .start-container p{
-        font-size: 25px;
-        margin-top: 10px;
+        font-size: 22px;
+        margin-top: 6px;
     }
 }
 
