--- a/style.css
+++ b/style.css
@@ -89,13 +89,18 @@ body{
     .container{
         margin-left: 5px;
         width: 335px;
-        height: 600px;
+        height: 570px;
         margin-top: 20px;
     }
 
     .question{
         width: 292px;
         margin-left: 20px;
+        height: 160px;
+    }
+
+    .question p{
+        margin-top: 45px;
     }
 
     .instruction{
@@ -106,6 +111,7 @@ body{
         display: flex;
         flex-wrap: wrap;
         margin-left: 26px;
+        margin-top: -4px;
     }
 
     .option-box{
