--- a/style.css
+++ b/style.css
@@ -1,24 +1,30 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     background: radial-gradient(circle, white, teal);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    width: 100vw;
+    height: 100vh;
 }
 
 .container{
-    position: fixed; 
-    margin-left: 370px; 
-    margin-top: 90px; 
+    margin: 5em auto; 
     background-color: #71b8c2; 
     height: 430px; 
-    width: 600px;
+    width: 43%;
     border-radius: 10px;
 }
 
 .question{
     background-color: teal;
     border-radius: 5px;
-    width: 500px;
-    margin-left: 50px;
-    padding: 1px 0;
+    width: 92%;
+    margin: 1em auto;
+    padding: 3.5em 0;
 }
 
 .question p{
@@ -34,15 +40,19 @@ body{
 
 .options-container{
     display: flex;
-    margin-left: 60px;
-    margin-top: 22px;
+    margin: 1em auto;
+    width: 90%;
 }
 
 .option-box{
-    width: 15%;
-    height: 52px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 18%;
+    height: 4em;
     background-color: #ffffff;
-    margin-right: 45px;
+    margin: auto;
+    /* margin-right: 45px; */
     text-align: center;
     font-style: italic;
     cursor: pointer;
@@ -87,20 +97,15 @@ body{
     }
 
     .container{
-        margin-left: 5px;
-        width: 335px;
-        height: 570px;
-        margin-top: 14px;
+        width: 90%;
+        height: 87%;
+        margin: 2.3em auto;
     }
 
     .question{
-        width: 292px;
-        margin-left: 20px;
-        height: 160px;
-    }
-
-    .question p{
-        margin-top: 45px;
+        width: 90%;
+        padding: 2.5em 0;
+        margin: 1em auto;
     }
 
     .instruction{
@@ -108,16 +113,19 @@ body{
     }
 
     .options-container{
-        display: flex;
-        flex-wrap: wrap;
-        margin-left: 26px;
-        margin-top: -4px;
+        padding: 1em;
+        display: grid;
+        grid-gap: 1em;
+        grid-template-columns: 1fr 1fr;
+        margin: auto;
+        height: 45%;
     }
 
     .option-box{
-        width: 38%;
-        height: 88px;
-        margin: 10px;
+        padding: 1.7em;
+        width: 96%;
+        margin: auto;
+        height: 90%;
         font-size: 25px;
         border: 1px solid black;
     }
@@ -126,8 +134,7 @@ body{
         width: 40%;
         font-size: x-large;
         height: 40px;
-        margin-left: 100px;
-        margin-top: 18px;
+        margin: 1em auto;
         text-align: center;
     }
 
