--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body{
     background-color: teal;
     text-align: center;
     width: 20%;
-    height: 25px;
+    height: 27px;
     margin-left: 237px;
     font-size: large;
     margin-top: 40px;
@@ -91,7 +91,59 @@ body{
 
 
 /* Media queries for phones */
-@media only screen and (max-width: 450px){
+@media only screen and (max-width: 350px){
+    .container{
+        width: 90%;
+        height: 90%;
+        margin: 2.3em auto;
+    }
+
+    .question{
+        width: 90%;
+        padding: 2.5em 0;
+        margin: 1em auto;
+    }
+
+    .instruction{
+        font-size: 15px;
+    }
+
+    .options-container{
+        /* padding: 1em; */
+        display: grid;
+        grid-gap: 1em;
+        grid-template-columns: 1fr 1fr;
+        margin: auto;
+        height: 45%;
+    }
+
+    .option-box{
+        padding: 1em;
+        width: 95%;
+        margin: auto;
+        height: 90%;
+        font-size: 25px;
+        border: 1px solid black;
+    }
+
+    .start-container{
+        width: 45%;
+        font-size: x-large;
+        height: 8%;
+        margin: 0.2em auto;
+        text-align: center;
+    }
+
+    .start-container p{
+        font-size: 22px;
+        margin-top: 6px;
+    }
+}
+
+
+
+
+@media only screen and (min-width: 351px){
     body{
         background: radial-gradient(circle, white, teal)
     }
@@ -133,7 +185,7 @@ body{
     .start-container{
         width: 40%;
         font-size: x-large;
-        height: 40px;
+        height: 7%;
         margin: 1em auto;
         text-align: center;
     }
