--- a/css/gamestyle.css
+++ b/css/gamestyle.css
@@ -19,6 +19,46 @@ body{
     border-radius: 10px;
 }
 
+.loadGame{
+    font-size: 17px;
+    color: black;
+    text-decoration: none;
+}
+
+/* Selection Page Style */
+.instruction0{
+    text-align: center;
+    font-style: italic;
+    font-size: 15px;
+    padding: 10px;
+    height: 8%;
+}
+
+.selection{
+    cursor: pointer;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    margin: 1em auto; 
+    background-color: white; 
+    width: 80%;
+    border-radius: 10px;
+    box-shadow: 0 9px #999;
+    background: teal
+}
+
+.selection:active{
+    box-shadow: 0 2px #666;
+    transform: translateY(4px);
+}
+
+.selection p{
+    padding: 60px;
+    font-size: 30px;
+}
+
+
+
+/* Maths Game page */
 .question{
     background-color: teal;
     border-radius: 5px;
