CSS styling made

--- a/css/gamestyle.css
+++ b/css/gamestyle.css
@@ -230,6 +230,10 @@ body{
         font-size: 22px;
         margin-top: 6px;
     }
+
+    .selectionA{
+        margin-bottom: 1.7em; 
+    }
 }
 
 
