--- a/css/gamestyle.css
+++ b/css/gamestyle.css
@@ -101,6 +101,31 @@ body{
     border: 1.5px solid black;
 }
 
+.score-div{
+    position: relative;
+}
+
+.result1{
+    position: absolute;
+    color: green;
+    font-size: 130px;
+    width: 100%;
+    animation-name: fadeInOut;
+    animation-duration: 0.7s;
+    animation-iteration-count: single-animation-iteration-count;
+    animation-timing-function: linear;
+    opacity: 0;
+}
+
+@keyframes fadeInOut{
+    from{
+        opacity: 1;
+        font-size: 10px;
+    }
+    to{
+        opacity: 0;
+    }
+}
 
 
 .start-container{
